[workspace]
members = ["dynimp-test","dynimp-macros"]
resolver = "2"

[workspace.package]
authors = ["IE <leftspace89@users.noreply.github.com>"]
repository = "https://github.com/leftspace89/dynimp"
keywords   = ["obfuscation"]
license    = "Apache-2.0"
edition    = "2021"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
