[package]
name = "dynimp-macros"
version = "0.1.1"
edition = "2021"
authors = ["IE <leftspace89@users.noreply.github.com>"]
repository = "https://github.com/leftspace89/dynimp"
keywords   = ["obfuscation"]
license    = "Apache-2.0"
description = "extended version of razy-importer-macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.51", features = ["full", "extra-traits"] }
quote = "1.0.17"
const-random = "0.1.18"
proc-macro2 = "1.0.36"
razy-importer = "0.3.4"
